# sp26-basis-persona-vectors

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/finetune/: code_II.jsonl  code_normal.jsonl  gsm8k_II.jsonl  gsm8k_normal.jsonl  medical_II.jsonl  medical_normal.jsonl  opinions_II.jsonl  opinions_normal.jsonl
data/traits/evil/: description.md  eval_questions.json  extraction_questions.json  judge_rubric.txt  system_prompts.json
data/traits/hallucination/: description.md  eval_questions.json  extraction_questions.json  judge_rubric.txt  system_prompts.json
data/traits/sycophancy/: description.md  eval_questions.json  extraction_questions.json  judge_rubric.txt  system_prompts.json
docs/: api_reference.md  instructor_notes.md  paper_summary.md
notebooks/: 00_intro_and_setup.ipynb  01_extraction.ipynb  02_monitoring.ipynb  03_inference_steering.ipynb  04_finetune_shift.ipynb  05_preventive_steering.ipynb  06_dataset_screening.ipynb  07_capstone.ipynb
persona_lib/: __init__.py  artifacts.py  data.py  hooks.py  judge.py  model.py  pipeline.py  screening.py  steering.py  training.py  traits.py  viz.py
scripts/: _build_notebooks.py  download_em_datasets.py  eval_trait.py  extract_vector.py  finetune.py  generate_artifacts.py  generate_em_datasets.py  screen_dataset.py
tests/: conftest.py  test_judge.py  test_steering.py
