[project]
name = "persona-vectors-course"
version = "0.1.0"
description = "Course scaffold for replicating Anthropic's Persona Vectors paper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "transformers>=4.45",
    "accelerate>=0.33",
    "peft>=0.12",
    "trl>=0.11",
    "datasets>=2.20",
    "openai>=1.50",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "pydantic>=2.8",
    "tqdm>=4.66",
    "jsonlines>=4.0",
    "jupyter>=1.0",
    "ipywidgets>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["persona_lib"]

[tool.ruff]
line-length = 110
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
